--- a/NRobot.Server.Test/NRobot.Server.Test.csproj
+++ b/NRobot.Server.Test/NRobot.Server.Test.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -42,6 +42,7 @@
     <Compile Include="DomainTests\ClassAccessFixture.cs" />
     <Compile Include="DomainTests\KeywordArgumentsFixture.cs" />
     <Compile Include="DomainTests\KeywordDocumentationFixture.cs" />
+    <Compile Include="DomainTests\KeywordFixture.cs" />
     <Compile Include="DomainTests\MethodAccessFixture.cs" />
     <Compile Include="DomainTests\ParameterTypesFixture.cs" />
     <Compile Include="DomainTests\ReturnTypesFixture.cs" />
