Fix compile errors and add more logging

--- a/NRobot.Server/app.config
+++ b/NRobot.Server/app.config
@@ -17,6 +17,11 @@
 	</NRobotServerConfiguration>
 
 	<log4net>
+      <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger [%ndc] - %message%newline"/>
+      </layout>
+    </appender>
     	<appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
     		<file value="NRobotServer.log"/>
     		<appendToFile value="true"/>
@@ -25,7 +30,7 @@
     		<maximumFileSize value="100KB"/>
     		<staticLogFileName value="true"/>
     		<layout type="log4net.Layout.PatternLayout">
-        		<conversionPattern value="%date [%thread] %-5level %logger - %message%newline"/>
+        		<conversionPattern value="%date [%thread] %-5level %logger [%ndc] - %message%newline"/>
     		</layout>
 		</appender>
 		<root>
